--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="/JS/navlink.js" defer></script>
     <script src="/JS/Main.js" defer></script>
     <script src="/JS/settings.js" defer></script>
+    <!-- SW -->
     <link rel="manifest" href="/manifest.json">
     <script src="/sw.js" defer></script>
 
@@ -49,7 +50,7 @@
             <p>Priserne er <span>ex. moms</span> og afgifter</p>
         </div>
         <div>
-            <p>Du vises lige nu priserne for <span>Vest Danmark</span></p>
+            <p>Du vises lige nu priserne for <span id="selectedregion">Vest Danmark</span></p>
         </div>
     </footer>
 </body>
