--- a/offline.html
+++ b/offline.html
@@ -10,8 +10,9 @@
     <link rel="stylesheet" href="/Style/css/offline.css">
 
     <!-- JS -->
+    <!-- <script src="/JS/navlink.js" defer></script> -->
+    <!-- SW -->
     <link rel="manifest" href="manifest.json">
-    <script src="/JS/navlink.js" defer></script>
     <script src="/sw.js" defer></script>
 </head>
 <body>
