--- a/historik.html
+++ b/historik.html
@@ -10,19 +10,17 @@
       href="/assets/appIcons//mainIcon.ico"
     />
     <!-- CSS -->
+    <link rel="stylesheet" href="/Style/css/Historik.css" />
     <link rel="stylesheet" href="/Style/css/Global.css" />
-    <link rel="stylesheet" href="Style/css/Historik.css" />
     <!-- Icons -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
 
     <!-- JS -->
     <script src="/JS/historik.js" defer></script>
     <script src="/JS/navlink.js" defer></script>
     <script src="/JS/Main.js" defer></script>
     <script src="/JS/settings.js" defer></script>
+    <!-- SW -->
     <link rel="manifest" href="/manifest.json">
     <script src="/sw.js" defer></script>
   </head>
@@ -42,8 +40,6 @@
       <i class="fa-solid fa-gear"></i>
     </nav>
     <main>
-
-
       <section id="historik">
         <a class="settinglink" href="/settings.html">
           <i class="fa-solid fa-gear"></i>
@@ -52,19 +48,17 @@
         <div id="calender">
           <input type="date" name="selected_date" id="pickdate" value="2018-07-22" min="2022-11-01" max="2018-12-31">
         </div>
-        </div>
         <p id="textdate"></p>
-        <ul id="prices"></ul>
+        <ul id="historikprices"></ul>
       </section>
-
     </main>
     <footer class="footer">
       <div>
-        <p>Priserne er <span>ex. moms</span> og afgifter</p>
+          <p>Priserne er <span>ex. moms</span> og afgifter</p>
       </div>
       <div>
-        <p>Du vises lige nu priserne for <span>Vest Danmark</span></p>
+          <p>Du vises lige nu priserne for <span id="selectedregion">Vest Danmark</span></p>
       </div>
-    </footer>
+  </footer>
   </body>
 </html>
