--- a/oversigt.html
+++ b/oversigt.html
@@ -16,6 +16,7 @@
     <script src="/JS/oversigt.js" defer></script>
     <script src="/JS/navlink.js" defer></script>
     <script src="/JS/settings.js" defer></script>
+    <script src="/JS/Main.js" defer></script>
     <!-- SW -->
     <link rel="manifest" href="/manifest.json">
     <script src="/sw.js" defer></script>
