--- a/dashboard.html
+++ b/dashboard.html
@@ -40,11 +40,45 @@
             <li><a href="/index.html">Lige nu</a></li>
             <li><a href="/historik.html">Historik</a></li>
         </ul>
-        <div id="btn">
-           <a class="settinglink" href="#">
+        <div class="wrapper">
+           <a class="settinglink" id="btn" href="#modal">
                 <i class="fa-solid fa-gear"></i>
             </a>
         </div>
+
+        <dialog class="modal" id="modal">
+            <div class="modal_content">
+                <a href="#" class="modal-close" title="Close Modal">X</a>
+                <h1>indstillinger</h1>
+                <div class="moms">
+                    <p>priser inkl. moms</p>
+                    <label class="switch">
+                        <input type="checkbox" class="switch-input">
+                        <span class="switch-label" data-on="On" data-off="Off"></span>
+                        <span class="switch-handle"></span>
+                    </label>
+                </div>
+                <div class="alarm">
+                    <p>laveste pris alarm</p>
+                    <label class="switch">
+                        <input type="checkbox" class="switch-input">
+                        <span class="switch-label" data-on="On" data-off="Off"></span>
+                        <span class="switch-handle"></span>
+                    </label>
+                </div>
+                <div class="select">
+                    <p>vælg Region</p>
+                    <select id="region">
+                        <option disabled selected>VÆLG REGION</option>
+                        <option value="DK1"">Vest for Storbælt</option>
+                        <option value="DK2">Øst for Storbælt</option>
+                    </select>
+                </div>
+            </div>
+
+        </dialog>
+
+
         <!-- <a class="modal-open" href="#modal">Click To Open Regular Modal</a> -->
         <!-- <div class="modal" id="modal">
             <div class="modal-content">
