--- a/dashboard.html
+++ b/dashboard.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elprisen.nu</title>
-    <link rel="icon" type="image/x-icon" href="/assets/appIcons//mainIcon.ico">
+    <link rel="icon" type="image/x-icon" href="./assets/appIcons//mainIcon.ico">
     <!-- CSS -->
-    <link rel="stylesheet" href="/Style/css/dashboard.css">
-    <link rel="stylesheet" href="/Style/css/Global.css">
+    <link rel="stylesheet" href="./Style/css/dashboard.css">
+    <link rel="stylesheet" href="./Style/css/Global.css">
     
     <!-- Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
     <!-- JS -->
-    <script src="/JS/MainDashboard.js" defer></script>
-    <script src="/JS/Now.js" defer></script>
-    <script src="/JS/oversigt.js" defer></script>
-    <script src="/JS/historik.js" defer></script>
+    <script src="./JS/MainDashboard.js" defer></script>
+    <script src="./JS/Now.js" defer></script>
+    <script src="./JS/oversigt.js" defer></script>
+    <script src="./JS/historik.js" defer></script>
     
     <!-- SW -->
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="./manifest.json">
     <!-- <script src="/sw.js" defer></script> -->
 
 </head>
@@ -48,7 +48,9 @@
 
         <dialog class="modal" id="modal">
             <div class="modal_content">
-                <a href="#" class="modal-close" title="Close Modal">X</a>
+                <a href="#" class="modal-close" title="Close Modal">slafh
+                    <i class="fa-regular fa-circle-xmark"></i>
+                </a>
                 <h1>indstillinger</h1>
                 <div class="moms">
                     <p>priser inkl. moms</p>
