--- a/historik.html
+++ b/historik.html
@@ -7,22 +7,22 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="/assets/appIcons//mainIcon.ico"
+      href="./assets/appIcons//mainIcon.ico"
     />
     <!-- CSS -->
-    <link rel="stylesheet" href="/Style/css/Historik.css" />
-    <link rel="stylesheet" href="/Style/css/Global.css" />
+    <link rel="stylesheet" href="./Style/css/Historik.css" />
+    <link rel="stylesheet" href="./Style/css/Global.css" />
     <!-- Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
 
     <!-- JS -->
-    <script src="/JS/historik.js" defer></script>
-    <script src="/JS/navlink.js" defer></script>
-    <script src="/JS/Main.js" defer></script>
-    <script src="/JS/settings.js" defer></script>
+    <script src="./JS/historik.js" defer></script>
+    <script src="./JS/navlink.js" defer></script>
+    <script src="./JS/Main.js" defer></script>
+    <script src="./JS/settings.js" defer></script>
     <!-- SW -->
-    <link rel="manifest" href="/manifest.json">
-    <script src="/sw.js" defer></script>
+    <link rel="manifest" href="./manifest.json">
+    <script src="./sw.js" defer></script>
   </head>
   <body>
     <nav class="nav">
