--- a/offline.html
+++ b/offline.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Offline</title>
+    <link rel="icon" type="image/x-icon" href="./assets/appIcons//mainIcon.ico">
     <!-- CSS -->
-    <link rel="stylesheet" href="/Style/css/Global.css">
-    <link rel="stylesheet" href="/Style/css/index.css">
-    <link rel="stylesheet" href="/Style/css/offline.css">
+    <link rel="stylesheet" href="./Style/css/Global.css">
+    <link rel="stylesheet" href="./Style/css/index.css">
+    <link rel="stylesheet" href="./Style/css/offline.css">
 
     <!-- JS -->
     <!-- <script src="/JS/navlink.js" defer></script> -->
     <!-- SW -->
-    <link rel="manifest" href="manifest.json">
-    <script src="/sw.js" defer></script>
+    <link rel="manifest" href="./manifest.json">
+    <script src=".sw.js" defer></script>
 </head>
 <body>
     <section class="errpage">
