--- a/oversigt.html
+++ b/oversigt.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>oversigt</title>
-    <link rel="icon" type="image/x-icon" href="/assets/appIcons//mainIcon.ico">
+    <link rel="icon" type="image/x-icon" href="./assets/appIcons//mainIcon.ico">
     <!-- CSS -->
-    <link rel="stylesheet" href="/Style/css/Global.css">
-    <link rel="stylesheet" href="/Style/css/Oversigt.css">
+    <link rel="stylesheet" href="./Style/css/Global.css">
+    <link rel="stylesheet" href="./Style/css/Oversigt.css">
 
     <!-- Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
     <!-- JS -->
-    <script src="/JS/oversigt.js" defer></script>
-    <script src="/JS/navlink.js" defer></script>
-    <script src="/JS/settings.js" defer></script>
-    <script src="/JS/Main.js" defer></script>
+    <script src="./JS/oversigt.js" defer></script>
+    <script src="./JS/navlink.js" defer></script>
+    <script src="./JS/settings.js" defer></script>
+    <script src="./JS/Main.js" defer></script>
     <!-- SW -->
-    <link rel="manifest" href="/manifest.json">
-    <script src="/sw.js" defer></script>
+    <link rel="manifest" href="./manifest.json">
+    <script src="./sw.js" defer></script>
 </head>
 <body>
     <nav class="nav">
