--- a/settings.html
+++ b/settings.html
@@ -5,17 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Settings</title>
-    <link rel="icon" type="image/x-icon" href="/assets/appIcons//mainIcon.ico">
+    <link rel="icon" type="image/x-icon" href="./assets/appIcons//mainIcon.ico">
     <!-- CSS -->
-    <link rel="stylesheet" href="/Style/css/Global.css">
-    <link rel="stylesheet" href="/Style/css/Settings.css">
+    <link rel="stylesheet" href="./Style/css/Global.css">
+    <link rel="stylesheet" href="./Style/css/Settings.css">
     <!-- Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <!-- JS -->
-    <script src="/JS/settings.js" defer></script>
-    <script src="/JS/settings.js" defer ></script>
-    <link rel="manifest" href="/manifest.json">
-    <script src="/sw.js" defer></script>
+    <script src="./JS/settings.js" defer></script>
+    <script src="./JS/settings.js" defer ></script>
+    <link rel="manifest" href="./manifest.json">
+    <script src="./sw.js" defer></script>
 </head>
 <body>
     <nav class="nav">
